--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -258,7 +258,7 @@ here are:
 \begin{enumerate}
 	\item F-test: can we separate out at least one of our classes from the others?
 	\item Games-Howell pairwise test: can we separate our classes out from each other individually?
-	\item
+	\item MANOVA test: how do the (means of the) classes vary in the joint space?
 \end{enumerate}
 Number 1 is a relatively relaxed test - if all but one classes are indistiguishable, we will still get a low p-value for this test.
 Number 2 is pairwise - for lots of classes, there will be lots of results. You have to be a bit careful here - if we have 20 pairs of
